--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -47,7 +47,7 @@
                                             (object)new { disabled = "disabled", @class = "form-control" } :
                                             (object)new { @class = "form-control"}
                                    )
-                                    <div class="validmsgSubCamp"></div>
+                                    <div class="validmsgSubCamp HideOnsave"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -56,7 +56,7 @@
                                     @Html.TextAreaFor(m => m.CampaignDescription, (Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "form-control" } :
                                         (object)new { @class = "form-control", maxlength = 500, onkeypress = "return alpha(event)" })
-                                    <div class="validmsgSubCampDesc"></div>
+                                    <div class="validmsgSubCampDesc HideOnsave"></div>
                                 </div>
                             </div>
                         </div>
@@ -93,9 +93,9 @@
                                         @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd/MM/yyyy") : ""), disabled = "disabled", @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" } :
                                             (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd/MM/yyyy") : ""), @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" })
-                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar add-on startcal"></span></span>
                                     </div>
-                                    <div class="validmsgSdate"></div>
+                                    <div class="validmsgSdate HideOnsave"></div>
                                 </div>
                                
                       
@@ -109,9 +109,9 @@
                                         @Html.TextBoxFor(m => m.EndDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd/MM/yyyy") : ""), disabled = "disabled", @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" } :
                                             (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd/MM/yyyy") : ""), @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" })
-                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                        <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar add-on endcal"></span></span>
                                     </div>
-                                    <div class="validmsgEdate"></div><div class="validmsgDatecompare"></div>
+                                    <div class="validmsgEdate HideOnsave"></div><div class="validmsgDatecompare"></div>
                                 </div>
                               
                             </div>
@@ -126,7 +126,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Campaign Lead<span class="text-danger">*</span></label><br />
-                                    @Html.EnumDropDownListFor(m=>m.CampaignTypes, (Model.Id != 0 && Model.Status == "Complete") ?
+                                    @Html.EnumDropDownListFor(m=>m.CampaignTypes,(Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "chosen-single form-control" } :
                                         (object)new { @class = "chosen-single form-control"} )
                                     <div class="validmsgsubcampaigntype"></div>
@@ -144,7 +144,7 @@
                                             (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                             (object)new { @class = "chosen-select form-control"})
                                             <a data-next-stage="@(Model.BgSelectUnselect==false?"bgselect":"bgunselect")"  data-target-id="BusinessGroups_Id" data-select-all="BGselectunselect" href="javascript:void(0);"> @(Model.BgSelectUnselect==false? "Select All" : "Select None")</a> 
-                                             <div class="validmsgbusinesGp"></div>
+                                             <div class="validmsgbusinesGp HideOnsave"></div>
                                             <div class="validmsgSingleBGselect"></div>
                                         </div>
 
@@ -156,7 +156,7 @@
                                             (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                             (object)new { @class = "chosen-select form-control" })
                                             <a data-next-stage="@(Model.SegSelectUnselect==false?"Segselect":"Segunselect")"  data-target-id="Segments_Id" data-select-all="Segselectunselect" href="javascript:void(0);"> @(Model.SegSelectUnselect==false? "Select All" : "Select None")</a> 
-                                             <div class="validmsgbusinesSegment"></div>
+                                             <div class="validmsgbusinesSegment HideOnsave"></div>
                                             <div class="validmsgSingleSegment"></div>
                                         </div>
                                     </div>
@@ -171,7 +171,7 @@
                                                 (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" }) 
                                             @*<a data-next-stage="select" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                             <a data-next-stage="@(Model.BlSelectUnselect==false?"select":"unselect")" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.BlSelectUnselect == false ? "Select All" : "Select None")</a> 
-                                            <div class="validmsgbusinesLine"></div>
+                                            <div class="validmsgbusinesLine HideOnsave"></div>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
@@ -182,7 +182,7 @@
                                                 (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" }) 
                                             @*<a data-next-stage="select" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                             <a data-next-stage="@(Model.IndustrySelectUnselect==false?"select":"unselect")" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.IndustrySelectUnselect == false ? "Select All" : "Select None")</a> 
-                                            <div class="validmsgbusinesIndustry"></div>
+                                            <div class="validmsgbusinesIndustry HideOnsave"></div>
                                         </div>
 
                                     </div>
@@ -194,7 +194,7 @@
                                             @Html.TextBoxFor(m => m.Budget, (Model.Id != 0 && Model.Status == "Complete") ?
                                                 (object)new { disabled = "disabled", @class = "form-control " } :
                                                 (object)new { @class = "form-control", @maxlength = "10", onkeypress = "numericvalidate(event)" })
-                                            <div class="validmsgBudget"></div>
+                                            <div class="validmsgBudget HideOnsave"></div>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
