--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -55,15 +55,25 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Tactic Type<span class="text-danger">*</span></label><br />
-                                    @Html.ListBoxFor(m => m.TacticType_Id, new SelectList(Model.TacticTypeViewModels, "Id", "Name",
-                                        Model.TacticType_Id),
+                                    @Html.DropDownListFor(m => m.TacticType_Id, new SelectList(Model.TacticTypeViewModels, "Id", "Name",
+                                        Model.TacticType),
                                         Model.Id != 0 && Model.Status == "Complete" ?
                                             (object)new { disabled = "disabled", @class = "chosen-single form-control" } :
                                             (object)new { @class = "chosen-single form-control" })
-                                    <div class="validmsgTactictype"></div>
+                                    <div class="validmsgTactictype HideOnsave"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
+                                <div class="form-group">
+                                    <label>Journey Stage</label><span class="text-danger">*</span><br />
+                                    @Html.DropDownListFor(m => m.JournetStage_Id, new SelectList(Model.JourneyStageViewModels, "Id", "Name",
+                                        Model.JournetStage_Id), "None selected.",
+                                        Model.Id != 0 && Model.Status == "Complete" ?
+                                            (object)new { disabled = "disabled", @class = "chosen-single form-control" } :
+                                            (object)new { @class = "chosen-single form-control" })
+                                    <div class="validmsgJourneyStage HideOnsave"></div>
+                                </div>
+
                             </div>
                         </div>
                         <div class="row">
@@ -73,7 +83,7 @@
                                     @Html.TextBoxFor(m => m.Name, (Model.Id != 0 && Model.Status == "Complete") ?
                                     (object)new { disabled = "disabled", @class = "form-control" } :
                                     (object)new { @class = "form-control" })
-                                    <div class="validmsgtacticname"></div>
+                                    <div class="validmsgtacticname HideOnsave"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -82,7 +92,7 @@
                                     @Html.TextAreaFor(m => m.TacticDescription, (Model.Id != 0 && Model.Status == "Complete") ?
                                     (object)new { disabled = "disabled", @class = "form-control" } :
                                     (object)new { @class = "form-control", onkeypress = "return alpha(event)", @maxlength = "500" })
-                                    <div class="validmsgtacticdesc"></div>
+                                    <div class="validmsgtacticdesc HideOnsave"></div>
                                 </div>
                             </div>
                         </div>
@@ -120,9 +130,9 @@
                                             @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd/MM/yyyy") : ""), disabled = "disabled", @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" } :
                                             (object)new { Value = (Model.StartDate != null ? Model.StartDate.Value.ToString("dd/MM/yyyy") : ""), @class = "form-control start-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" })
-                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar add-on startcal"></span></span>
                                         </div>
-                                        <div class="validmsgSdate"></div>
+                                        <div class="validmsgSdate HideOnsave"></div>
                                     </div>
 
                                 </div>
@@ -135,9 +145,9 @@
                                             @Html.TextBoxFor(m => m.EndDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd/MM/yyyy") : ""), disabled = "disabled", @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" } :
                                             (object)new { Value = (Model.EndDate != null ? Model.EndDate.Value.ToString("dd/MM/yyyy") : ""), @class = "form-control end-date-cal", @maxlength = "10", @placeholder = "DD/MM/YYYY" })
-                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+                                            <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar add-on endcal"></span></span>
                                         </div>
-                                        <div class="validmsgEdate"></div><div class="validmsgDatecompare"></div>
+                                        <div class="validmsgEdate HideOnsave"></div><div class="validmsgDatecompare"></div>
                                     </div>
                                 </div>
 
@@ -155,7 +165,7 @@
                                         (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                         (object)new { @class = "chosen-select form-control" })
                                     <a data-next-stage="@(Model.BgSelectUnselect==false?"bgselect":"bgunselect")" data-target-id="BusinessGroups_Id" data-select-all="BGselectunselect" href="javascript:void(0);"> @(Model.BgSelectUnselect == false ? "Select All" : "Select None")</a>
-                                    <div class="validmsgbusinesGp"></div>
+                                    <div class="validmsgbusinesGp HideOnsave"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -166,7 +176,7 @@
                                         (object)new { @class = "chosen-select form-control" })
                                     @*   <a data-next-stage="select" data-target-id="Segments_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                     <a data-next-stage="@(Model.SegSelectUnselect==false?"Segselect":"Segunselect")" data-target-id="Segments_Id" data-select-all="Segselectunselect" href="javascript:void(0);"> @(Model.SegSelectUnselect == false ? "Select All" : "Select None")</a>
-                                    <div class="validmsgbusinesSegment"></div>
+                                    <div class="validmsgbusinesSegment HideOnsave"></div>
                                 </div>
                             </div>
                         </div>
@@ -179,7 +189,7 @@
                                         (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
                                     @*<a data-next-stage="select" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                     <a data-next-stage="@(Model.BlSelectUnselect==false?"select":"unselect")" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.BlSelectUnselect == false ? "Select All" : "Select None")</a>
-                                    <div class="validmsgbusinesLine"></div>
+                                    <div class="validmsgbusinesLine HideOnsave"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -190,7 +200,7 @@
                                         (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
                                     @*<a data-next-stage="select" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
                                     <a data-next-stage="@(Model.IndustrySelectUnselect==false?"select":"unselect")" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.IndustrySelectUnselect == false ? "Select All" : "Select None")</a>
-                                    <div class="validmsgbusinesIndustry"></div>
+                                    <div class="validmsgbusinesIndustry HideOnsave"></div>
                                 </div>
                             </div>
                         </div>
