--- a/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaignForm.cshtml
@@ -45,7 +45,7 @@
                                     @Html.TextBoxFor(m => m.Name,
                                   (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control" } :
-                                            (object)new { @class = "form-control"}
+                                            (object)new { @class = "form-control", @maxlength = "50", onkeypress = "return alpha(event,Name)" }
                                    )
                                     <div class="validmsgSubCamp HideOnsave"></div>
                                 </div>
@@ -55,7 +55,7 @@
                                     <label>Sub Campaign Description & Goals<span class="text-danger">*</span></label>
                                     @Html.TextAreaFor(m => m.CampaignDescription, (Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "form-control" } :
-                                        (object)new { @class = "form-control", maxlength = 500, onkeypress = "return alpha(event)" })
+                                        (object)new { @class = "form-control", maxlength = 500, onkeypress = "return alpha(event,CampaignDescription)" })
                                     <div class="validmsgSubCampDesc HideOnsave"></div>
                                 </div>
                             </div>
