--- a/MRM/Content/Site.css
+++ b/MRM/Content/Site.css
@@ -137,3 +137,9 @@ a {
     color: #444 !important;
      height: 32px !important;
 }
+ .currency{
+	    width: 46%;
+    margin-top: -6%;
+    margin-left: 32px;
+    height: 32px;
+	}
